--- a/package.json
+++ b/package.json
@@ -1,1 +1,20 @@
-// placeholder content for package.json
+{
+  "name": "nikhil-portfolio",
+  "version": "1.0.0",
+  "description": "Personal portfolio of Nikhil AU",
+  "main": "index.html",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "framer-motion": "^10.16.4"
+  },
+  "devDependencies": {
+    "vite": "^4.5.0",
+    "@vitejs/plugin-react": "^4.0.3"
+  }
+}
